--- a/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
@@ -93,7 +93,7 @@
 					<key>HS05</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>0</integer>
+						<integer>255</integer>
 						<key>port</key>
 						<data>
 						BQAAAA==
@@ -140,7 +140,7 @@
 					<key>HS10</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>0</integer>
+						<integer>255</integer>
 						<key>port</key>
 						<data>
 						CgAAAA==
@@ -159,6 +159,8 @@
 					</dict>
 					<key>SS02</key>
 					<dict>
+						<key>Comment</key>
+						<string>port1</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
 						<key>port</key>
