--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -411,7 +411,7 @@
 				<key>framebuffer-con1-enable</key>
 				<data>AQAAAA==</data>
 				<key>framebuffer-con1-type</key>
-				<data>AAgAAA==</data>
+				<data>AgAAAA==</data>
 				<key>framebuffer-fbmem</key>
 				<data>AACQAA==</data>
 				<key>framebuffer-patch-enable</key>
